[package]
name = "unscroogle-photos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindet = "0.3.2"
chrono = "0.4.24"
img-parts = "0.3.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
